# bolt.new_fork

./: .gitignore  example_streamlit.py  main.py  pyproject.toml
streamlit_builder/: ROADMAP.md
streamlit_builder/cli/: commands.py  display.py  main.py
streamlit_builder/core/: constants.py
streamlit_builder/core/container/: filesystem.py  process.py  terminal.py  webcontainer.py
streamlit_builder/core/files/: watcher.py
streamlit_builder/core/llm/: action_runner.py  artifact_executor.py  artifact_parser.py  chat.py  constants.py  model.py  parser.py  prompts.py  stream.py
streamlit_builder/package/: uv_manager.py
streamlit_builder/project/: manager.py
streamlit_builder/project/templates/: __init__.py
streamlit_builder/runtime/: session_manager.py
streamlit_builder/server/: streamlit_runner.py
streamlit_builder/tests/: test_cli.py  test_container.py  test_llm.py  test_package.py  test_project.py  test_prompts.py  test_server.py  test_session.py  test_watcher.py
streamlit_builder/utils/: logger.py
workspaces/20250213_052733/: Home.py
workspaces/20250213_052733/pages/: 1_Projects.py  2_Blog.py
